--- a/app/src/main/res/layout/meals_item.xml
+++ b/app/src/main/res/layout/meals_item.xml
@@ -1,22 +1,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tv_meal_category"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Category"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_marginEnd="8dp" /> <!-- Added margin for spacing -->
+        android:orientation="horizontal"
+        android:paddingBottom="8dp">
 
-    <Spinner
-        android:id="@+id/spinner_options"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingStart="16dp" />
+        <TextView
+            android:id="@+id/tv_meal_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_marginEnd="8dp" />
+
+        <Spinner
+            android:id="@+id/spinner_options"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingStart="16dp" />
+
+        <TextView
+            android:id="@+id/tv_meal_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Price"
+            android:textColor="@color/black"
+            android:layout_marginStart="16dp" />
+    </LinearLayout>
+
 </LinearLayout>
